<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_close"
        style="@style/SmallButton"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/dark_blue_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="14dp"
            android:src="@drawable/ic_cross" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/filter_options_text"
        android:textAppearance="@style/RegularText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/orange_main"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cv_close">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="21dp"
            android:layout_marginBottom="7dp"
            android:text="@string/done_button_text"
            android:textAppearance="@style/RegularText"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="60dp"
        android:text="@string/brand_text"
        android:textAppearance="@style/RegularText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_close" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_brand"
        style="@style/DropDownContainer"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_brand"
        app:layout_constraintTop_toBottomOf="@id/tv_brand">

        <AutoCompleteTextView
            android:id="@+id/tv_brand_spinner"
            style="@style/DropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="6dp"
            android:paddingBottom="7dp"
            android:text="@string/brand_spinner_text"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/price_text"
        android:textAppearance="@style/RegularText"
        app:layout_constraintStart_toStartOf="@id/til_brand"
        app:layout_constraintTop_toBottomOf="@id/til_brand" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_price"
        style="@style/DropDownContainer"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_price"
        app:layout_constraintTop_toBottomOf="@id/tv_price">

        <AutoCompleteTextView
            android:id="@+id/tv_price_spinner"
            style="@style/DropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="6dp"
            android:paddingBottom="7dp"
            android:text="@string/price_spinner_text"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/size_text"
        android:textAppearance="@style/RegularText"
        app:layout_constraintStart_toStartOf="@id/til_price"
        app:layout_constraintTop_toBottomOf="@id/til_price" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_size"
        style="@style/DropDownContainer"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="31dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_size"
        app:layout_constraintTop_toBottomOf="@id/tv_size">

        <AutoCompleteTextView
            android:id="@+id/tv_size_spinner"
            style="@style/DropDownMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="6dp"
            android:paddingBottom="7dp"
            android:text="@string/all_sizes_text"
            tools:ignore="LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>