<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/iv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:textAppearance="@style/RegularText"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_location"
        app:layout_constraintStart_toEndOf="@id/iv_location"
        app:layout_constraintTop_toTopOf="@id/iv_location"
        tools:text="Zihuatanejo, Gro" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:src="@drawable/ic_down_arrow_triangle"
        app:layout_constraintBottom_toBottomOf="@id/tv_location"
        app:layout_constraintStart_toEndOf="@id/tv_location"
        app:layout_constraintTop_toTopOf="@id/tv_location" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:src="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="@id/tv_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_location" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_select_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="18dp"
        android:text="@string/select_category_text"
        android:textAppearance="@style/TextAppearance.AppCompat.DefaultTextStyle"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_location" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/TextAppearance.AppCompat.Thin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all_text"
        android:layout_marginEnd="33dp"
        app:layout_constraintTop_toTopOf="@id/tv_select_category"
        app:layout_constraintBottom_toBottomOf="@id/tv_select_category"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_select_category"
        tools:listitem="@layout/product_categories_list_item_unselected" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="300dp"
        android:layout_height="34dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_categories">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_search"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:background="@android:color/transparent"
                android:hint="@string/search_hint_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>